--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -6,15 +6,33 @@ input {
 }
 
 filter {
-  grok {
-    match => { "message" => "%{SYSLOGTIMESTAMP:timestamp} %{SYSLOGHOST:host} %{DATA:program}: %{GREEDYDATA:message}" }
+  if "Bandwidth" in [message] {
+    grok {
+      match => {
+        "message" => "%{TIMESTAMP_ISO8601:ts} %{LOGLEVEL:Loglevel} %{WORD:Metric}: %{DATA:Chanel} %{NUMBER:Data}"
+      }
+    }
+    mutate {
+      add_field => {
+        "YEAR" => "%{+YYYY}"
+        "MONTHNUM" => "%{+MM}"
+        "MONTHDAY" => "%{+DD}"
+        "HOUR" => "%{+HH}"
+        "MINUTE" => "%{+mm}"
+        "SECOND" => "%{+ss.SSS}"
+      }
+    }
+    date {
+      match => ["ts", "ISO8601"]
+      target => "@timestamp"
+    }
   }
 }
 
 output {
   elasticsearch {
-    hosts => ["http://localhost:9200"]
-    index => "syslog-%{+YYYY.MM.dd}"  # This creates a daily index for syslogs
+    hosts => ["localhost:9200"]
+    index => "syslog-%{+YYYY.MM.dd}"
   }
-  stdout { codec => rubydebug }  # Optional: outputs to console for debugging
+  stdout { codec => rubydebug }
 }
